--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,18 @@
     "require": {},
     "require-dev": {
         "orchestra/testbench": "^4.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "CollectionMacroThanos\\": "src",
+            "CollectionMacroThanos\\Tests\\": "tests"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+
+            ]
+        }
     }
 }
