--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
+        "php": "^7.1.3"
     },
     "require-dev": {
         "orchestra/testbench": "^4.0",
