--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,14 @@
             "email": "christian.griffin@live.com"
         }
     ],
+    "prefer-stable": true,
     "minimum-stability": "dev",
     "require": {
         "php": "^7.1.3"
     },
     "require-dev": {
         "orchestra/testbench": "^4.0",
-        "php-coveralls/php-coveralls": "2.2.x-dev"
+        "php-coveralls/php-coveralls": "^2.2"
     },
     "autoload": {
         "psr-4": {
